# knowledge-center

./: .gitignore  CHANGELOG.md  CONDUCTOR_COMMAND_TEXT.md  DEPLOYMENT_SYSTEM_SUMMARY.md  ENVIRONMENT.md  GETTING_STARTED.md  INDEX.md  KEITHSTART_IMPROVEMENTS.md  KEITHSTART_INSTALLATION.md  MCP_INTEGRATION.md  MEMORY.md  MEMORY_SYSTEM_GUIDE.md  NEXT_STEPS.md  PATH_RESOLUTION.md  README.md  SETUP_SUMMARY.md  SLASH_COMMAND.md  STARTER_PACKAGE.md  WORKFLOW.md  conductor.json  create-symlinks.sh  install-keithstart.sh  install-mcps.sh  keithstart-issues-analysis.md
docs/: DEPLOYMENT_SYSTEM.md  environment-setup.md
notes/: 2025-11-16-keithstart-sed-invalid-command.md  2025-11-16-memory-system-implementation.md  2025-11-16-project-metadata-system-design.md  2025-11-16-sample-note.md
project-init/: .projects-log  README.md  versions.json
project-init/docs/: mcp-guide.md
project-init/mandatory/: .env.example  .env.production  .env.staging  .gitignore  .project.json  CHANGELOG.md  MEMORY.md  README.md
project-init/mandatory/.claude/: CLAUDE.md  DEPLOYMENT_INSTRUCTIONS.md
project-init/mandatory/.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
project-init/mandatory/docs/: README.md  (+2 more)
project-init/optional/python/: main.py  pyproject.toml  requirements.txt
project-init/scripts/: install-mcps-standalone.sh  install.sh  keithstart-wrapper.sh  keithstart.sh  keithsync.sh
scripts/: sync-env.sh
templates/: DEPLOYMENT_QUICKSTART.md  claude-md.md  env-template.md  error-template.md  issue-note.md  prd-template.md  project-context.md  skill-template.md  solution.md
(+6 files in other folders)
